# blogstack-k8s

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CURRENT_INSTANCE_FIX.md  Makefile  PLAN.md  README.md  VICTORIAMETRICS_DESIGN.md
.github/workflows/: theme-deploy.yaml  validate.yaml
clusters/dev/: apps.yaml  project.yaml
clusters/prod/: README.md  apps.yaml  kustomization.yaml  project.yaml
config/: README.md  dev.env  prod.env
docs/: 00-prerequisites.md  01-infrastructure.md  02-argocd-setup.md  03-vault-setup.md  04-operations.md  CI.md  CONFORMANCE.md  CUSTOMIZATION.md  README.md
docs/en/: 00-prerequisites.md  01-infrastructure.md  02-argocd-setup.md  03-1-ingress-setup.md  03-2-cloudflare-setup.md  03-3-verification.md  03-troubleshooting.md  03-vault-setup.md  04-ingress-setup.md  05-cloudflare-setup.md  06-verification.md  07-smtp-setup.md  08-operations.md  09-troubleshooting.md  10-monitoring.md  CI.md  CONFORMANCE.md  CUSTOMIZATION.md  ENVIRONMENTS.md  README.md  RESET.md  SECURITY.md
docs/ko/: 00-prerequisites.md  01-infrastructure.md  02-argocd-setup.md  03-1-ingress-setup.md  03-2-cloudflare-setup.md  03-3-verification.md  03-troubleshooting.md  03-vault-setup.md  04-ingress-setup.md  CI.md  (+14 more)
migration/markdown-postings/: .gitignore  README.md  main.py  pyproject.toml
migration/markdown-postings/examples/: sample-post.md
migration/markdown-postings/src/: converter.py  exporter.py  image_handler.py  packager.py  parser.py
scripts/: argocd-enable-helm.sh  bootstrap.sh  check-monitoring-prerequisites.sh  health-check.sh  quick-reset.sh  validate.sh
(+72 files in other folders)
