[project]
name = "hugo-to-ghost"
version = "0.1.0"
description = "Hugo markdown to Ghost import JSON converter"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.0",
    "loguru>=0.7.3",
    "python-dateutil>=2.9.0.post0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
hugo-to-ghost = "main:cli"
